--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Zhang-Wei Hong</title>
+  <title>Chi-Chang Lee</title>
 
   <link rel="icon" href="assests/icon.png" />
 
@@ -47,7 +47,7 @@
             <td style="padding: 2%; width: 70%; vertical-align: middle;">
 
               <p style="text-align: center;">
-                <name>Zhang-Wei Hong</name>
+                <name>Chi-Chang Lee</name>
               </p>
 
               <p>
@@ -64,10 +64,10 @@
               </p>
 
               <p style="text-align: center;">
-                <a href="mailto:zwhong@mit.edu" target="_blank"><i class="fas fa-envelope ai-2x"></i></a>&nbsp;
-                <a href="https://github.com/williamd4112" target="_blank"><i class="fab fa-github ai-2x"></i></a>&nbsp;
-                <a href="files/zhangwei-cv.pdf" target="_blank"><i class="ai ai-cv-square ai-2x"></i></a>&nbsp;
-                <a href="https://scholar.google.com/citations?user=GZkyN4cAAAAJ&hl" target="_blank"><i class="ai ai-google-scholar-square ai-2x"></i></a>&nbsp;
+                <a href="mailto:r08922a27@csie.ntu.edu.tw" target="_blank"><i class="fas fa-envelope ai-2x"></i></a>&nbsp;
+                <a href="https://github.com/ChangLee0903" target="_blank"><i class="fab fa-github ai-2x"></i></a>&nbsp;
+                <a href="files/ccl-cv.pdf" target="_blank"><i class="ai ai-cv-square ai-2x"></i></a>&nbsp;
+                <a href="https://scholar.google.com/citations?user=r225tRsAAAAJ&hl" target="_blank"><i class="ai ai-google-scholar-square ai-2x"></i></a>&nbsp;
               </p>
             </td>
 
@@ -92,31 +92,31 @@
           <table><tbody>
             <tr>
               <td class="exp-avatar">
-                <img src="imgs/avatar_ibm.png" />
+                <img src="imgs/avatar_mit.png" />
               </td>
 
               <td class="exp-description">
-                <b>Research Intern</b>
-                <span style="float: right;">Jun. 2023 - Sep. 2023</span>
+                <b>Research Collaborator</b>
+                <span style="float: right;">Jul. 2023 – present</span>
                 <br>
-                <a href="https://mitibmwatsonailab.mit.edu/" target="_blank">MIT-IBM Watson AI Lab</a>
+                <a href="https://cap.csail.mit.edu/improbable-ai-lab-lab-tour" target="_blank">Improbable AI Lab at Massachusetts Institute of Technology</a>
                 <br>
-                Advisor: <a href="https://akashgit.github.io/">Akash Srivastava</a>
+                Advisor: <a href="https://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a>
               </td>
             </tr>
 
             <tr>
               <td class="exp-avatar">
-                <img src="imgs/avatar_msr.png" />
+                <img src="imgs/hcis.png" />
               </td>
 
               <td class="exp-description">
-                <b>Research Intern</b>
-                <span style="float: right;">Jun. 2022 - Oct. 2022</span>
+                <b>Research Assistant</b>
+                <span style="float: right;">Mar. 2024 – present</span>
                 <br>
-                <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-montreal/" target="_blank">Microsoft Research Montreal</a>
+                <a href="https://sites.google.com/site/yitingchen0524/hcis-lab" target="_blank">HCIS Lab at National Chiao Tung University</a>
                 <br>
-                Advisor: <a href="https://www.microsoft.com/en-us/research/people/rolaroch/">Romain Laroche</a> and <a href="https://www.microsoft.com/en-us/research/people/retachet/">Remi Tachet des Combes</a>.
+                Advisor: <a href="https://sites.google.com/site/yitingchen0524/home">Yi-Ting Chen</a>.
               </td>
             </tr>
           </tbody></table>
@@ -124,118 +124,16 @@
           <table><tbody>
               <tr>
                 <td class="exp-avatar">
-                  <img src="imgs/avatar_pfn.png" />
-                </td>
-
-                <td class="exp-description">
-                  <b>Research Intern</b>
-                  <span style="float: right;">Jun. 2019 - Oct. 2019</span>
-                  <br>
-                  <a href="https://www.preferred-networks.jp/en/" target="_blank">Preferred Networks</a>
-                  <br>
-                  Advisor: <a href="https://prabhatnagarajan.com/">Prabhat Nagarajan</a> and Dr. <a href="https://gjmaeda.github.io/">Guilherme Maeda</a>.
-                </td>
-              </tr>
-          </tbody></table>
-          <br>
-          <table><tbody>
-              <tr>
-                <td class="exp-avatar">
-                  <img src="imgs/avatar_appier.png" />
-                </td>
-
-                <td class="exp-description">
-                  <b>Research intern</b>
-                  <span style="float: right;">Feb. 2019 - Jun. 2019</span>
-                  <br>
-                  <a href="https://www.appier.com//" target="_blank">Appier</a>
-                  <br>
-                  Advisor: Prof. <a href="https://aliensunmin.github.io" target="_blank">Min Sun</a>
-                </td>
-              </tr>
-          </tbody></table>
-          <br>
-          <table><tbody>
-              <tr>
-                <td class="exp-avatar">
-                  <img src="imgs/avatar_tud.png" />
-                </td>
-
-                <td class="exp-description">
-                  <b>Visiting researcher</b>
-                  <span style="float: right;">Jul. 2018 - Oct. 2018</span>
-                  <br>
-                  <a href="https://www.ias.informatik.tu-darmstadt.de/" target="_blank">Intelligent Autonomous System (IAS) group at TU Darmstadt</a>
-                  <br>
-                  Advisor: Prof. <a href="https://www.ias.informatik.tu-darmstadt.de/Team/JanPeters" target="_blank">Jan Peters</a>
-                </td>
-              </tr>
-          </tbody></table>
-          <br>
-          <table><tbody>
-              <tr>
-                <td class="exp-avatar">
-                  <img src="imgs/avatar_elsa.png" />
+                  <img src="imgs/CITI.jpeg" />
                 </td>
 
                 <td class="exp-description">
                   <b>Research Assistant</b>
-                  <span style="float: right;">2017 Jul. - 2020 Mar.</span>
+                  <span style="float: right;">Mar. 2019 – Mar. 2024</span>
                   <br>
-                  <a href="https://www.facebook.com/ElsaResearchLab/" target="_blank">ELSA Lab at National Tsing Hua University</a>
+                  <a href="https://bio-asplab.citi.sinica.edu.tw" target="_blank">Bio-ASP Lab at Academia Sinica CITI, Taiwan</a>
                   <br>
-                  Advisor: Prof. <a href="http://cymaxwelllee.wixsite.com/elsa" target="_blank">Chun-Yi Lee</a>
-                </td>
-              </tr>
-          </tbody></table>
-          <br>
-          <table><tbody>
-            <tr>
-              <td class="exp-avatar">
-                <img src="imgs/avatar_nthu.png" />
-              </td>
-
-              <td class="exp-description">
-                <b>Research Collaboration</b>
-                <span style="float: right;">2016 Oct. - 2017 Mar.</span>
-                <br>
-                <a href="https://aliensunmin.github.io/lab/info.html" target="_blank">Vision Science Lab at National Tsing Hua University</a>
-                <br>
-                Advisor: Prof. <a href="https://aliensunmin.github.io/" target="_blank">Min Sun</a>
-              </td>
-            </tr>
-        </tbody></table>
-        <br>
-        <table><tbody>
-          <tr>
-            <td class="exp-avatar">
-              <img src="imgs/avatar_nvidia.png" />
-            </td>
-
-            <td class="exp-description">
-              <b>Teaching Assistant</b>
-              <span style="float: right;">2017 - 2018</span>
-              <br>
-              <a href="https://www.nvidia.com/zh-tw/" target="_blank">Taiwan NVIDIA Deep Learning Institute</a>
-              <br>
-              Advisor: Prof. <a href="http://cymaxwelllee.wixsite.com/elsa" target="_blank">Chun-Yi Lee</a>
-            </td>
-          </tr>
-      </tbody></table>
-      <br>
-        <table><tbody>
-              <tr>
-                <td class="exp-avatar">
-                  <img src="imgs/avatar_mtk.png" />
-                </td>
-
-                <td class="exp-description">
-                  <b>Software Engineering Intern</b>
-                  <span style="float: right;">Jul. 2016 - Nov. 2016</span>
-                  <br>
-                  <a href="https://www.mediatek.com/" target="_blank">Mediatek</a>
-                  <br>
-                  Advisor: <a href="https://www.linkedin.com/in/antliu/?originalSubdomain=tw/" target="_blank">Anthony Liu</a>
+                  Advisor: <a href="https://scholar.google.com/citations?hl=en&user=ZO5e5I4AAAAJ">Yu Tsao</a>
                 </td>
               </tr>
           </tbody></table>
@@ -243,14 +141,16 @@
           <table><tbody>
               <tr>
                 <td class="exp-avatar">
-                  <img src="imgs/avatar_itri.png" />
+                  <img src="imgs/NII.jpeg" />
                 </td>
 
                 <td class="exp-description">
-                  <b>Contract Software Engineer</b>
-                  <span style="float: right;">Oct. 2015 - Dec. 2015</span>
+                  <b>Visiting Researcher</b>
+                  <span style="float: right;">Nov. 2022 – Feb. 2023</span>
                   <br>
-                  <a href="https://www.itri.org.tw/english/" target="_blank">Industrial Technology Research Institute (ITRI) </a>
+                  <a href="https://nii-yamagishilab.github.io" target="_blank">Yamagishi Laboratory at National Institute of Informatics, Japan</a>
+                  <br>
+                  Advisor: Prof. <a href="https://researchmap.jp/read0205283" target="_blank">Junichi Yamagishi</a>
                 </td>
               </tr>
           </tbody></table>
