--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           <table><tbody>
             <tr>
               <td class="pub-avatar">
-                <img src="imgs/HEPO.gif" />
+                <img src="imgs/lc4sv.png" />
               </td>
               <td class="pub-description">
                 <papertitle>LC4SV: A Denoising Framework Learning to Compensate for Unseen Speaker Verification Models</papertitle>
@@ -254,7 +254,7 @@
           <table><tbody>
             <tr>
               <td class="pub-avatar">
-                <img src="imgs/avatar_eipo_icra.gif" />
+                <img src="nastar.png" />
               </td>
               <td class="pub-description">
                 <papertitle>NASTAR: Noise Adaptive Speech Enhancement with Target-Conditional Resampling</papertitle>
@@ -271,7 +271,7 @@
           <table><tbody>
             <tr>
               <td class="pub-avatar">
-                <img src="imgs/D4AM.png" />
+                <img src="imgs/seril.jpg" />
               </td>
               <td class="pub-description">
                 <papertitle>SERIL: Noise adaptive speech enhancement using regularization-based incremental learning</papertitle>
