--- a/index.html
+++ b/index.html
@@ -221,6 +221,8 @@
               </td>
             </tr>
           </tbody></table>
+          </div>
+        <br><br>
         <!--publications-->
         <table><tbody>
           <tr>
