--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
           <table><tbody>
             <tr>
               <td class="pub-avatar">
-                <img src="nastar.png" />
+                <img src="imgs/nastar.png"/>
               </td>
               <td class="pub-description">
                 <papertitle>NASTAR: Noise Adaptive Speech Enhancement with Target-Conditional Resampling</papertitle>
