--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                   Accepted as a conference paper in ICLR 2023
                 <br>
                   <a href="https://openreview.net/forum?id=5fvXH49wk2" target="_blank">Paper</a> |
-                  <a href="https://github.com/ChangLee0903/D4AM" target="_blank">Code</a> |
+                  <a href="https://github.com/ChangLee0903/D4AM" target="_blank">Code</a>
               </td>
             </tr>
           </tbody></table>
@@ -283,7 +283,7 @@
                 Accepted as a conference paper in INTERSPEECH, 2020
                 <br>
                   <a href="https://arxiv.org/pdf/2005.11760" target="_blank">Paper</a> |
-                  <a href=" https://github.com/ChangLee0903/SERIL" target="_blank">Code</a> |
+                  <a href=" https://github.com/ChangLee0903/SERIL" target="_blank">Code</a>
               </td>
             </tr>
           </tbody></table>
