--- a/index.html
+++ b/index.html
@@ -173,40 +173,19 @@
           <table><tbody>
             <tr>
               <td class="pub-avatar">
-                <img src="imgs/avatar_curisoity_redteam.png" />
+                <img src="imgs/HEPO.gif" />
               </td>
               <td class="pub-description">
-                <papertitle>Curiosity-driven Red-teaming for Large Language Models</papertitle>
+                <papertitle>Harnessing Heuristics for Deep Reinforcement Learning via Constrained Optimization</papertitle>
                 <br>
-                <I><b>Zhang-Wei Hong</b>, Idan Shenfeld, Tsun-Hsuan Wang, Yung-Sung Chuang, Aldo Pareja, James R. Glass, Akash Srivastava, Pulkit Agrawal </I>                     
+                <I><b>Chi-Chang Lee*</b>, Zhang-Wei Hong*, Pulkit Agrawal (∗ indicates equal contribution)</I>             
                 <br>
-                  Accepted as a conference paper in ICLR 2024
+                Submitted to NeurIPS 2024, currently scored as ‘Weak Accept’, ‘Accept’, and ‘Accept’
                 <br>
-                  <a href="https://arxiv.org/pdf/2402.19464.pdf" target="_blank">Paper</a> |
-                  <a href="https://github.com/Improbable-AI/curiosity_redteam" target="_blank">Code</a> |
-                  <a href="bibtex/hong2024curiosity.bib" target="_blank">Bibtex </a>                                    
+                  <a href="" target="_blank">Paper (coming soon)</a>
               </td>
             </tr>
           </tbody></table>
-
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/avatar_dw.gif" />
-              </td>
-              <td class="pub-description">
-                <papertitle>Beyond Uniform Sampling: Offline Reinforcement Learning with Imbalanced Datasets </papertitle>
-                <br>
-                <I><b>Zhang-Wei Hong</b>, Aviral Kumar, Sathwik Karnik, Abhishek Bhandwaldar, Akash Srivastava, Joni Pajarinen, Romain Laroche, Abhishek Gupta, Pulkit Agrawal </I>             
-                <br>
-                  Accepted as a conference paper in NeurIPS 2023
-                <br>
-                  <a href="https://arxiv.org/pdf/2310.04413.pdf" target="_blank">Paper</a> |
-                  <a href="https://github.com/Improbable-AI/dw-offline-rl" target="_blank">Code</a> |                 
-              </td>
-            </tr>
-          </tbody></table>
-          
           <table><tbody>
             <tr>
               <td class="pub-avatar">
@@ -215,281 +194,33 @@
               <td class="pub-description">
                 <papertitle>Maximizing Velocity by Minimizing Energy</papertitle>
                 <br>
-                <I>Srinath Mahankali*, <b>Chi-Chang Lee*</b>, Gabriel B. Margolis, Zhang-Wei Hong, Pulkit Agrawal</I>             
+                <I>Srinath Mahankali*, <b>Chi-Chang Lee*</b>, Gabriel B. Margolis, Zhang-Wei Hong, Pulkit Agrawal (∗ indicates equal contribution)</I>             
                 <br>
                   Accepted as a conference paper in International Conference on Robotics and Automation (ICRA), 2024
                 <br>
                   <a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf" target="_blank">Paper</a> |
                   <a href="https://srinathm1359.github.io/eipo-locomotion" target="_blank">Website</a> |
-                  <a href="https://github.com/Improbable-AI/walk-these-ways" target="_blank">Code</a> |    
+                  <a href="https://github.com/Improbable-AI/walk-these-ways" target="_blank">Code</a>
               </td>
             </tr>
           </tbody></table>
-
           <table><tbody>
             <tr>
               <td class="pub-avatar">
-                <img src="imgs/avatar_tgrl.png" />
+                <img src="imgs/D4AM.png" />
               </td>
               <td class="pub-description">
-                <papertitle>TGRL: An Algorithm for Teacher Guided Reinforcement Learning </papertitle>
+                <papertitle>D4AM: A General Denoising Framework for Downstream Acoustic Models</papertitle>
                 <br>
-                <I>Idan Shenfeld, <b>Zhang-Wei Hong</b>, Aviv Tamar, Pulkit Agrawal</I>               
-                <br>
-                  Accepted as a conference paper in ICML 2023
-                <br>
-                  <a href="https://openreview.net/forum?id=Hk3m8Nh7mn" target="_blank">Paper</a> |
-                  <a href="https://sites.google.com/view/tgrl-paper/home" target="_blank">Website</a> |
-                  <a href="https://github.com/idanshen/cleanrl/blob/master/cleanrl/tgrl_continuous_action.py" target="_blank">Code</a> |                 
-              </td>
-            </tr>
-          </tbody></table>
-          
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/avatar_pql.png" />
-              </td>
-              <td class="pub-description">
-                <papertitle>Parallel Q-Learning: Scaling Off-policy Reinforcement Learning under Massively Parallel Simulation</papertitle>
-                <br>
-                <I>Zechu Li*, Tao Chen*, <b>Zhang-Wei Hong</b>, Anurag Ajay, Pulkit Agrawal</I>               
-                <br>
-                  Accepted as a conference paper in ICML 2023
-                <br>
-                  <a href="https://arxiv.org/abs/2307.12983" target="_blank">Paper</a> |                 
-                  <a href="https://github.com/Improbable-AI/pql" target="_blank">Code</a> |                 
-              </td>
-            </tr>
-          </tbody></table>
-
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/avatar_harness.png" />
-              </td>
-              <td class="pub-description">
-                <papertitle>Harnessing Mixed Offline Reinforcement Learning Datasets via Trajectory Reweighting </papertitle>
-                <br>
-                <I><b>Zhang-Wei Hong</b> Pulkit Agrawal, Remi Tachet des Combes and Romain Laroche</I>
+                <I><b>Chi-Chang Lee</b>, Yu Tsao, Hsin-Min Wang, Chu-Song Chen</I>                     
                 <br>
                   Accepted as a conference paper in ICLR 2023
                 <br>
-                  <a href="https://openreview.net/pdf?id=OhUAblg27z" target="_blank">Paper</a> |
-                  <a href="https://github.com/Improbable-AI/harness-offline-rl" target="_blank">Code</a> |                 
+                  <a href="https://openreview.net/forum?id=5fvXH49wk2" target="_blank">Paper</a> |
+                  <a href="https://github.com/ChangLee0903/D4AM" target="_blank">Code</a>
               </td>
             </tr>
           </tbody></table>
-
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/avatar_eipo.png" />
-              </td>
-
-              <td class="pub-description">
-                <papertitle>Redeeming intrinsic rewards via constrainted optimization</papertitle>
-                <br>
-                <I>Eric Chen*,  <b>Zhang-Wei Hong*</b>, Joni Pajarinen and Pulkit Agrawal</I> (* indiccates co-first author)
-                <br>
-                  Accepted as a conference paper in NeurIPS 2022
-                <br>
-                <a href="pubs/neurips22_eipo.pdf" target="_blank">Paper</a> |
-                <a href="https://sites.google.com/view/neurips22-eipo/" target="_blank">Website</a> |
-                <a href="https://github.com/Improbable-AI/eipo" target="_blank">Code</a> |
-                <a href="https://news.mit.edu/2022/ensuring-ai-works-with-right-dose-curiosity-1110" target="_blank"> MIT News</a>
-              </td>
-            </tr>
-          </tbody></table>
-
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/avatar_bilinear.png" />
-              </td>
-
-              <td class="pub-description">
-                <papertitle>Bilinear Value Networks for Multi-goal Reinforcement Learning</papertitle>
-                <br>
-                <I><b>Zhang-Wei Hong*</b>, Ge Yang*,  and Pulkit Agrawal</I> (* indiccates co-first author)
-                <br>
-                  International Conference on Learning Representation (ICLR) 2022 - Conference paper
-                <br>
-                <a href="https://openreview.net/forum?id=LedObtLmCjS" target="_blank">Paper</a> | <a href="https://github.com/Improbable-AI/bvn" target="_blank">Code </a>
-              </td>
-            </tr>
-          </tbody></table>
-
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/avatar_ter.png" />
-              </td>
-
-              <td class="pub-description">
-                <papertitle>Topological Experience Replay</papertitle>
-                <br>
-                <I><b>Zhang-Wei Hong</b>, Tao Chen, Yen-Chen Lin, Joni Pajarinen, and Pulkit Agrawal</I>
-                <br>
-                  International Conference on Learning Representation (ICLR) 2022 - Conference paper
-                <br>
-                <a href="https://openreview.net/forum?id=OXRZeMmOI7a" target="_blank">Paper</a> | <a href="https://github.com/Improbable-AI/ter" target="_blank">Code </a>
-              </td>
-            </tr>
-          </tbody></table>
-
-
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/avatar_iros22.gif" />
-              </td>
-
-              <td class="pub-description">
-                <papertitle>Stubborn: A Strong Baseline for Indoor Object Navigation</papertitle>
-                <br>
-                <I>Haokuan Luo, Albert Yue, <b>Zhang-Wei Hong </b>, Pulkit Agrawal </I>
-                <br>
-                  IEEE/RSJ International Conference on Intelligent Robots and Systems 2022 - Conference paper
-                <br>
-                <a href="https://arxiv.org/pdf/2203.07359.pdf" target="_blank">Paper</a> |
-                <a href="https://github.com/Improbable-AI/Stubborn" target="_blank">Code</a>
-              </td>
-            </tr>
-          </tbody></table>
-
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/avatar_icra2021.png" />
-              </td>
-
-              <td class="pub-description">
-                <papertitle>Reducing the Deployment-Time Inference Control Costs of Deep Reinforcement Learning Agents via an Asymmetric Architecture</papertitle>
-                <br>
-                <I>Chin-Jui Chang, Yu-Wei Chu, Chao-Hsien Ting, Hao-Kang Liu, <b>Zhang-Wei Hong</b>, and Chun-Yi Lee</I>
-                <br>
-                  International Conference on Robotics and Automation (ICRA) 2021 - Conference paper
-                <br>
-                <a href="pubs/icra2021.pdf" target="_blank">Paper</a>
-              </td>
-            </tr>
-          </tbody></table>
-
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/avatar_ecml2021.png" />
-              </td>
-
-              <td class="pub-description">
-                <papertitle>Periodic Intra-Ensemble Knowledge Distillation for Reinforcement Learning</papertitle>
-                <br>
-                <I><b>Zhang-Wei Hong</b>, Prabhat Nagarajan, and Guilherme Maeda</I>
-                <br>
-                  European Conference on Machine Learning (ECML) 2021 - Conference paper
-                <br>
-                <a href="pubs/ecml2021.pdf" target="_blank">Paper</a>
-              </td>
-            </tr>
-          </tbody></table>
-
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/avatar_self-adv.png" />
-              </td>
-
-              <td class="pub-description">
-                <papertitle>Adversarial Active Exploration for Inverse Dynamics Model Learning</papertitle>
-                <br>
-                <I><b>Zhang-Wei Hong</b>, Tsu-Jui Fu, Tzu-Yun Shann, Yi-Hsiang Chang, and Chun-Yi Lee</I>
-                <br>
-                  Conference on Robot Learning (CoRL) 2019 - Oral
-                <br>
-                <a href="pubs/corl19_self-adv.pdf" target="_blank">Paper</a> | <a href="projs/corl19_self-adv.html" target="_blank">Project</a>
-              </td>
-            </tr>
-          </tbody></table>
-          <br>
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/avatar_div-exploration.png" />
-              </td>
-
-              <td class="pub-description">
-                <papertitle>Diversity-Driven Exploration Strategy for Deep Reinforcement Learning</papertitle>
-                <br>
-                <I><b>Zhang-Wei Hong</b>, Tzu-Yun Shann, Shih-Yang Su, Yi-Hsiang Chang, Tsu-Jui Fu, and Chun-Yi Lee</I>
-                <br>
-                  Neural Information Processing Systems (NeurIPS) 2018 - Poster
-                <br>
-                  International Conference on Representation Learning (ICLR) Workshop 2018
-                <br>
-                <a href="pubs/nips18_div-driven.pdf" target="_blank">Paper</a> | <a href="projs/nips18_div-driven.html" target="_blank">Project</a>
-              </td>
-            </tr>
-        </tbody></table>
-        <br>
-
-          <br>
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/avatar_ijcai2018_v2r.png" />
-              </td>
-
-              <td class="pub-description">
-                <papertitle>Virtual-to-Real: Learning to Control in Visual Semantic Segmentation</papertitle>
-                <br>
-                <I><b>Zhang-Wei Hong</b>, Chen Yu-Ming, Shih-Yang Su, Tzu-Yun Shann, Yi-Hsiang Chang, Hsuan-Kung Yang, Brian Hsi-Lin Ho, Chih-Chieh Tu, Yueh-Chuan Chang, Tsu-Ching Hsiao, Hsin-Wei Hsiao, Sih-Pin Lai, and Chun-Yi Lee</I>
-                <br>
-                  International Joint Conference on Artificial Intelligence (IJCAI) 2018 - Oral
-                <br>
-                <a href="pubs/ijcai2018_v2r.pdf" target="_blank">Paper</a> | <a href="https://hellochick.github.io/projects/Sim-to-Real" target="_blank">Project
-              </td>
-            </tr>
-          </tbody></table>
-          <br>
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/avatar_aamas2018_dpiqn.png" />
-              </td>
-
-              <td class="pub-description">
-                <papertitle>Deep Policy Inference Q-Network for Multi-Agent Systems</papertitle>
-                <br>
-                <I><b>Zhang-Wei Hong</b>, Shih-Yang Su, Tzu-Yun Shann, Yi-Hsiang Chang, and Chun-Yi Lee</I>
-                <br>
-                International Conference On Autonomous Agents and Multi-Agent Systems (AAMAS) 2018 - Oral
-                <br>
-                <a href="pubs/aamas2018_dpiqn.pdf" target="_blank">Paper</a>
-              </td>
-            </tr>
-          </tbody></table>
-          <br>
-
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/avatar_ijcai2017_adv.gif" />
-              </td>
-
-              <td class="pub-description">
-                <papertitle>Tactics of adversarial attack on deep reinforcement learning agents</papertitle>
-                <br>
-                <I>Yen-Chen Lin, <b>Zhang-Wei Hong</b>, Yuan-Hong Liao, Meng-Li Shih, Ming-Yu Liu, and Min Sun </I>
-                <br>
-                  International Joint Conference on Artificial Intelligence (IJCAI) 2018 - Poster
-                <br>
-                <a href="pubs/ijcai2017_adv.pdf" target="_blank">Paper</a> | <a href="https://yenchenlin.me/adversarial_attack_RL/" target="_blank">Project</a>
-              </td>
-            </tr>
-          </tbody></table>
-
-
           <!--<table><tbody>
             <tr>
               <td class="pub-avatar">
