--- a/index.html
+++ b/index.html
@@ -157,85 +157,6 @@
         </div>
         <br><br>
 
-        <table><tbody>
-          <tr>
-            <td class="all">
-              <heading>
-                <i class="fas fa-briefcase"></i>&nbsp;&nbsp;Experience<i class="fas fa-plus-square" style="float: right;" onclick="pressBtn(0)" id="exp-btn"></i>
-              </heading>
-            </td>
-          </tr>
-        </tbody></table>
-        <br>
-        <div style="height: 300px; overflow: auto;" id="exp-div">
-          <table><tbody>
-            <tr>
-              <td class="exp-avatar">
-                <img src="imgs/avatar_mit.png" />
-              </td>
-
-              <td class="exp-description">
-                <b>Research Collaborator</b>
-                <span style="float: right;">Jul. 2023 – present</span>
-                <br>
-                <a href="https://cap.csail.mit.edu/improbable-ai-lab-lab-tour" target="_blank">Improbable AI Lab at Massachusetts Institute of Technology</a>
-                <br>
-                Advisor: <a href="https://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a>
-              </td>
-            </tr>
-
-            <tr>
-              <td class="exp-avatar">
-                <img src="imgs/hcis.png" />
-              </td>
-
-              <td class="exp-description">
-                <b>Research Assistant</b>
-                <span style="float: right;">Mar. 2024 – present</span>
-                <br>
-                <a href="https://sites.google.com/site/yitingchen0524/hcis-lab" target="_blank">HCIS Lab at National Chiao Tung University</a>
-                <br>
-                Advisor: <a href="https://sites.google.com/site/yitingchen0524/home">Yi-Ting Chen</a>
-              </td>
-            </tr>
-          </tbody></table>
-          <br>
-          <table><tbody>
-              <tr>
-                <td class="exp-avatar">
-                  <img src="imgs/CITI.jpeg" />
-                </td>
-
-                <td class="exp-description">
-                  <b>Research Assistant</b>
-                  <span style="float: right;">Mar. 2019 – Mar. 2024</span>
-                  <br>
-                  <a href="https://bio-asplab.citi.sinica.edu.tw" target="_blank">Bio-ASP Lab at Academia Sinica CITI, Taiwan</a>
-                  <br>
-                  Advisor: <a href="https://scholar.google.com/citations?hl=en&user=ZO5e5I4AAAAJ">Yu Tsao</a>
-                </td>
-              </tr>
-          </tbody></table>
-          <br>
-          <table><tbody>
-              <tr>
-                <td class="exp-avatar">
-                  <img src="imgs/NII.jpeg" />
-                </td>
-
-                <td class="exp-description">
-                  <b>Visiting Researcher</b>
-                  <span style="float: right;">Nov. 2022 – Feb. 2023</span>
-                  <br>
-                  <a href="https://nii-yamagishilab.github.io" target="_blank">Yamagishi Laboratory at National Institute of Informatics, Japan</a>
-                  <br>
-                  Advisor: Prof. <a href="https://researchmap.jp/read0205283" target="_blank">Junichi Yamagishi</a>
-                </td>
-              </tr>
-          </tbody></table>
-        </div>
-        <br><br>
-        
         <!--publications-->
         <table><tbody>
           <tr>
@@ -256,130 +177,7 @@
               <td class="pub-description">
                 <papertitle>Harnessing Heuristics for Deep Reinforcement Learning via Constrained Optimization</papertitle>
                 <br>
-                <I><b>Chi-Chang Lee*</b>, Zhang-Wei Hong*, Pulkit Agrawal (∗ indicates equal contribution)</I>             
-                <br>
-                Submitted to NeurIPS 2024, currently scored as ‘Weak Accept’, ‘Accept’, and ‘Accept’
-                <br>
-                  <a href="" target="_blank">Paper (coming soon)</a>
-              </td>
-            </tr>
-          </tbody></table>
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/avatar_eipo_icra.gif" />
-              </td>
-              <td class="pub-description">
-                <papertitle>Maximizing Velocity by Minimizing Energy</papertitle>
-                <br>
-                <I>Srinath Mahankali*, <b>Chi-Chang Lee*</b>, Gabriel B. Margolis, Zhang-Wei Hong, Pulkit Agrawal (∗ indicates equal contribution)</I>             
-                <br>
-                  Accepted as a conference paper in International Conference on Robotics and Automation (ICRA), 2024
-                <br>
-                  <a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf" target="_blank">Paper</a> |
-                  <a href="https://srinathm1359.github.io/eipo-locomotion" target="_blank">Website</a> |
-                  <a href="https://github.com/Improbable-AI/walk-these-ways" target="_blank">Code</a>
-              </td>
-            </tr>
-          </tbody></table>
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/D4AM.png" />
-              </td>
-              <td class="pub-description">
-                <papertitle>D4AM: A General Denoising Framework for Downstream Acoustic Models</papertitle>
-                <br>
-                <I><b>Chi-Chang Lee</b>, Yu Tsao, Hsin-Min Wang, Chu-Song Chen</I>                     
-                <br>
-                  Accepted as a conference paper in ICLR 2023
-                <br>
-                  <a href="https://openreview.net/forum?id=5fvXH49wk2" target="_blank">Paper</a> |
-                  <a href="https://github.com/ChangLee0903/D4AM" target="_blank">Code</a>
-              </td>
-            </tr>
-          </tbody></table>
-          <!--<table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/avatar_l2c.png" />
-              </td>
-
-              <td class="pub-description">
-                <papertitle>L2C: Describing Visual Differences Needs Semantic Understanding of Individuals</papertitle>
-                <br>
-                <I>An Yang, Xin Wang, <b>Tsu-Jui Fu</b>, and William Yang Wang</I>
-              </td>
-            </tr>
-          </tbody></table>
-          <br>
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/avatar_sscr.png" />
-              </td>
-
-              <td class="pub-description">
-                <papertitle>SSCR: Iterative Language-Based Image Editing via Self-Supervised Counterfactual Reasoning</papertitle>
-                <br>
-                <I><b>Tsu-Jui Fu</b>, Xin Wang, Scott Grafton, Miguel Eckstein, and William Yang Wang</I>
-              </td>
-            </tr>
-          </tbody></table>
-          <br>
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/avatar_mtst.png" />
-              </td>
-
-              <td class="pub-description">
-                <papertitle>Multimodal Style Transfer Learning for Outdoor Vision-and-Language Navigation</papertitle>
-                <br>
-                <I>Wanrong Zhu, Xin Wang, <b>Tsu-Jui Fu</b>, An Yan, Pradyumna Narayana, Kazoo Sone, Sugato Basu, William Yang Wang</I>
-              </td>
-            </tr>
-          </tbody></table>
-          <br>
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/avatar_ssi.png" />
-              </td>
-
-              <td class="pub-description">
-                <papertitle>Self-Supervised Policy Initialization for Playing Games with Language Hints</papertitle>
-                <br>
-                <I><b>Tsu-Jui Fu</b> and William Yang Wang</I>
-              </td>
-            </tr>
-          </tbody></table>
-          <br>-->
-
-        </div>
-        <br><br>
-
-        <!--publications-->
-        <table><tbody>
-          <tr>
-            <td class="all">
-              <heading>
-                <i class="far fa-file-alt"></i>&nbsp;&nbsp;Selected Publications<i class="fas fa-plus-square" style="float: right;" onclick="pressBtn(1)" id="pub-btn"></i>
-              </heading>
-            </td>
-          </tr>
-        </tbody></table>
-        <br>
-        <div style="height: 400px; overflow: auto;" id="pub-div">
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/HEPO.gif" />
-              </td>
-              <td class="pub-description">
-                <papertitle>Harnessing Heuristics for Deep Reinforcement Learning via Constrained Optimization</papertitle>
-                <br>
-                <I><b>Chi-Chang Lee*</b>, Zhang-Wei Hong*, Pulkit Agrawal (∗ indicates equal contribution)</I>             
+                <I><b>Chi-Chang Lee∗</b>, Zhang-Wei Hong∗, Pulkit Agrawal (∗ indicates equal contribution)</I>             
                 <br>
                 Submitted to NeurIPS 2024, currently scored as ‘Weak Accept’, ‘Accept’, and ‘Accept’
                 <br>
@@ -419,7 +217,7 @@
                   Accepted as a conference paper in ICLR 2023
                 <br>
                   <a href="https://openreview.net/forum?id=5fvXH49wk2" target="_blank">Paper</a> |
-                  <a href="https://github.com/ChangLee0903/D4AM" target="_blank">Code</a>
+                  <a href="https://github.com/ChangLee0903/D4AM" target="_blank">Code</a> |
               </td>
             </tr>
           </tbody></table>
@@ -489,8 +287,7 @@
               </td>
             </tr>
           </tbody></table>
-
-        </div>
+          </div>
         <br><br>
 
         <!--teaching-->
