--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               <td class="pub-description">
                 <papertitle>Harnessing Heuristics for Deep Reinforcement Learning via Constrained Optimization</papertitle>
                 <br>
-                <I><b>Chi-Chang Lee∗</b>, Zhang-Wei Hong∗, Pulkit Agrawal (∗ indicates equal contribution)</I>             
+                <I><b>Chi-Chang Lee*</b>, Zhang-Wei Hong*, Pulkit Agrawal (∗ indicates equal contribution)</I>             
                 <br>
                 Submitted to NeurIPS 2024, currently scored as ‘Weak Accept’, ‘Accept’, and ‘Accept’
                 <br>
